# runotebook

./: Cargo.toml  README.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/test/: e2e.test.ts  ui.spec.ts
frontend/: build.js  package-lock.json  package.json  tsconfig.json
frontend/src/: api.ts  auth.ts  content.ts  editor.ts  index.html  logger.ts  main.ts  preview.ts  router.ts  styles.css  terminal.ts  types.ts  websocket.ts
frontend/src/pages/: browser.ts  editorPage.ts  landing.ts
src/: auth.rs  config.rs  file_ops.rs  git_ops.rs  main.rs  workspace.rs
static/: bundle.css  bundle.css.map  bundle.js  bundle.js.map  index.html  styles.css
