[package]
name = "runotepad"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "=4.3.1"
actix-ws = "=0.2.5"
actix-files = "=0.6.2"
actix-rt = "=2.8.0"
portable-pty = "0.8"
tokio = { version = "=1.32.0", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "=0.10.0"
